--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Selamat datang di Baca-News, sumber informasi terkini melalui blog dan tutorial kami. Temukan berita teknologi terbaru, tips, dan tutorial yang membahas berbagai aspek dunia digital. Baca-News, panduan terkini untuk menggali dan memahami teknologi modern."/>
     <meta name="keywords" content="apple, android, game, pc, gaming, iphone, technology, tutorials, reviews, software, hardware, gadgets, programming, cybersecurity, mobile apps, tech news, troubleshooting, tips and tricks, bro, innovation, digital world
 "/>
+    <meta name="google-site-verification" content="dH-_yKw-OvMRPWvlU_3HGuVdDQg9MJBA7_AKneEjewc" />
     <meta name="author" content="Codingest"/>
     <meta name="robots" content="all"/>
     <meta name="revisit-after" content="1 Days"/>
