--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <meta property="og:type" content=website/>
     <meta property="og:title" content="Home - Baca-News"/>
     <meta property="og:description" content="Selamat datang di Baca-News, sumber informasi terkini melalui blog dan tutorial kami. Temukan berita teknologi terbaru, tips, dan tutorial yang membahas berbagai aspek dunia digital. Baca-News, panduan terkini untuk menggali dan memahami teknologi modern."/>
-    <meta property="og:url" content="https://www.baca-news.com/"/>
+    <meta property="og:url" content="https://dishub.bandungkab.go.id/apps/ladang/"/>
     <meta name="twitter:card" content="summary_large_image"/>
     <meta name="twitter:site" content="Baca-News"/>
     <meta name="twitter:title" content="Home - Baca-News"/>
